--- a/src/components/ui/home/PresentationItemList.astro
+++ b/src/components/ui/home/PresentationItemList.astro
@@ -7,12 +7,12 @@ import { Icon } from "astro-icon/components";
   <div class="flex items-center justify-start space-x-5">
     <Icon
       name={props.icon}
-      class="text-blue-500 w-10 h-10 min-w-12 min-h-12 bg-base-300 p-2 rounded-xl"
+      class="text-accent min-w-10 min-h-10 p-2 rounded-xl"
     />
-    <div class="flex flex-col space-y-1">
+    <div class="flex flex-col space-y-1 text-lg text-gray-50">
       <h2 class="font-semibold">{props.field_name}</h2>
       <p>{props.value}</p>
     </div>
   </div>
-  {props.divider && <div class="divider my-2 px-4" />}
+  {props.divider && <div class="divider mt-6 px-4 divider-neutral" />}
 </li>
