--- a/src/components/ui/home/TimeLineItem.astro
+++ b/src/components/ui/home/TimeLineItem.astro
@@ -19,7 +19,7 @@ const { position, time, title, descriptionList: list = [] } = Astro.props;
   </div>
 
   <div class="timeline-end ml-4 mb-5 md:text-start">
-    <time class="font-mono italic">{time}</time>
+    <time class="font-mono italic text-base-content">{time}</time>
     <div class="text-lg font-black py-2">{title}</div>
     <ul class="list-disc list-inside pl-2">
       {list.map((item: string) => <li set:html={item} />)}
